deploy/apps/policy-docs/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: policy-docs
  labels:
    app.kubernetes.io/name: policy-docs
    app.kubernetes.io/part-of: ggi-policy
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
